--- a/templates/chess_game.html
+++ b/templates/chess_game.html
@@ -28,7 +28,7 @@
         const socket = io('ws://localhost:5000/chess');
         socket.on('connect', () => {
             console.log('connected!');
-            socket.emit('chess_connect', {userId: '{{ session.get("username") }}', gameId: '{{ game_id }}'});
+            socket.emit('chess_connect', {gameId: '{{ game_id }}'});
         });
 
 
@@ -49,7 +49,7 @@
                 for (const chessCase of row.children) {
                     const elem = chessCase.firstElementChild;
                     if (elem.alt.slice(0, 5) === color) {
-                        elem.setAttribute("onclick", "checkPossibleMoveForThisPiece(this, '{{ game_id }}')");
+                        elem.setAttribute("onclick", "checkPossibleMoveForThisPiece(this, '{{ game_id }}', socket)");
                     }
                 }
             }
