--- a/templates/chess_game.html
+++ b/templates/chess_game.html
@@ -49,9 +49,9 @@
             "g7", "e7", "c7", "a7", "h8", "f8", "d8", "b8",
         ];
         // Array containing any promotion movement
-        const promotionMoves = [
-            "a7a8", "b7b8", "c7c8", "d7d8", "e7e8", "f7f8", "g7g8", "h7h8",  // White
-            "a2a1", "b2b1", "c2c1", "d2d1", "e2e1", "f2f1", "g2g1", "h2h1",  // Black
+        const promotionCases = [
+            "a8", "b8", "c8", "d8", "e8", "f8", "g8", "h8",  // White
+            "a1", "b1", "c1", "d1", "e1", "f1", "g1", "h1",  // Black
         ];
         // Overridable var contributing to script logic
         let movesArray = [];
@@ -181,23 +181,64 @@
          *
          * @param move
          */
-        function checkPromotion(move) {
+        async function checkPromotion(move) {
             const fromChessCase = document.getElementById(move.slice(0, 2));
-            if (fromChessCase.firstElementChild.alt.slice(6) === "pawn" && promotionMoves.includes(move)) {
-                console.log("It is a promotion move!")
-                return choosePiece();
+            if (fromChessCase.firstElementChild.alt.slice(6) === "pawn" && promotionCases.includes(move.slice(2, 4))) {
+                console.log("It is a promotion move!");
+                $('#promotionModal').modal('show');
+                const piece = await choosePiece();
+                return move.slice(0, 4) + piece
             }
             return move
         }
 
+        // This is an async timeout util
+        const timeout = async ms => new Promise(res => setTimeout(res, ms));
+        // This is to be changed on user input
+        let next = false;
+
         /**
          *
          */
-        function choosePiece() {
-            let promotionMove;
-            $('#promotionModal').modal('show');
-
-            return promotionMove
+        async function choosePiece() {
+            let piece;
+            if (('{{ session.get("username") }}' !== '{{ receiver_username }}' && ('{{ sender_color }}' === "black" || '{{ session.get("sender_color") }}' === "black")) || ('{{ session.get("username") }}' === '{{ receiver_username }}' && '{{ receiver_color }}' === "black")) {
+                document.getElementById("promotedToBlackBishop").addEventListener("click", () => {
+                    piece = "b";
+                    next = true;
+                });
+                document.getElementById("promotedToBlackKnight").addEventListener("click", () => {
+                    piece = "n";
+                    next = true;
+                });
+                document.getElementById("promotedToBlackRook").addEventListener("click", () => {
+                    piece = "r";
+                    next = true;
+                });
+                document.getElementById("promotedToBlackQueen").addEventListener("click", () => {
+                    piece = "q";
+                    next = true;
+                });
+            } else {
+                document.getElementById("promotedToWhiteBishop").addEventListener("click", () => {
+                    piece = "B";
+                    next = true;
+                });
+                document.getElementById("promotedToWhiteKnight").addEventListener("click", () => {
+                    piece = "N";
+                    next = true;
+                });
+                document.getElementById("promotedToWhiteRook").addEventListener("click", () => {
+                    piece = "R";
+                    next = true;
+                });
+                document.getElementById("promotedToWhiteQueen").addEventListener("click", () => {
+                    piece = "Q";
+                    next = true;
+                });
+            }
+            while (next === false) await timeout(50);
+            return piece
         }
 
         /**
@@ -225,9 +266,9 @@
          *
          * @param event
          */
-        function updateChessBoard(event) {
+        async function updateChessBoard(event) {
             let move = event.currentTarget.possibility;
-            move = checkPromotion(move);
+            move = await checkPromotion(move);
             // Do a request to update the chess board status
             chessRequest({update: true, move: move})
                 .then(r => r.json())
@@ -986,7 +1027,7 @@
     <div class="modal fade" id="promotionModal" tabindex="-1" role="dialog"
          aria-labelledby="promotionModal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
-            <div class="modal-content">
+            <div class="modal-content text-center">
                 <div class="modal-header">
                     <h5 class="modal-title">Promotion de pièce</h5>
                 </div>
