--- a/templates/chess_game.html
+++ b/templates/chess_game.html
@@ -238,6 +238,7 @@
                 });
             }
             while (next === false) await timeout(50);
+            $('#promotionModal').modal('toggle');
             return piece
         }
 
