--- a/templates/chess_game.html
+++ b/templates/chess_game.html
@@ -1058,8 +1058,8 @@
          aria-labelledby="promotionModal" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title text-center">Promotion de pièce</h5>
+                <div class="modal-header text-center">
+                    <h5 class="modal-title">Promotion de pièce</h5>
                 </div>
                 <div class="modal-body">
                     <div class="row">
